# codegen-metrics

./: 01-collect-grades.ipynb  02-compute-metrics.ipynb  03-bootstrap.ipynb  README.md  codex.ipynb  pyproject.toml
data/datasets/: codex_context.jsonl  conala-dataset.json  conala-dataset.jsonl  django.json  hs.json
data/to-grade/: conala-model-pairs.json  conala-model-scores.json  hs-model-pairs.json  hs-model-scores.json
data/to-grade/conala/: conala-aggregated-grades.json  conala-all-grades.json  conala-human-grades.json  conala.json  grader1.conala.json  grader10.conala.json  grader11.conala.json  grader12.conala.json  grader13.conala.json  grader14.conala.json  grader15.conala.json  grader16.conala.json  grader2.conala.json  grader3.conala.json  grader4.conala.json  grader5.conala.json  grader6.conala.json  grader7.conala.json  grader8.conala.json  grader9.conala.json
data/to-grade/hs/: grader1.hs.json  grader2.hs.json  grader3.hs.json  grader4.hs.json  hs-aggregated-grades.json  hs-all-grades.json  hs-human-grades.json
metrics_evaluation/grading/: hs-rate-notk.py  hs-rate.py
